# splot

./: .gitignore  Cargo.toml  README.md  Trunk.toml  Trunk_Demo.toml  Trunk_Release.toml  build.rs  index.html
.github/workflows/: ci.yml
assets/: manifest.json  sw.js
misc/: splot.desktop
src/: fixedsizebuffer.rs  lib.rs  main.rs
src/app/: mod.rs  ui.rs
src/serialconnection/: dummy.rs  mod.rs  native.rs  web.rs
