[package]
name = "splot"
version = "0.1.0"
authors = ["Felix Zwettler <f.zwettler@posteo.de>"]
edition = "2021"
rust-version = "1.65"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
demo = []

[dependencies]
anyhow = "1"
log = "0.4"
async-trait = "0.1"
futures = "0.3"
once_cell = "1"
serde = { version = "1", features = ["derive"] } # You only need this if you want app persistence
image = { version = "0.24", features = ["png"] }
instant = { version = "0.1", features=["wasm-bindgen"] }
egui = "0.24"
egui_plot = "0.24"
egui_extras = {version = "0.24", features = ["all_loaders"] }
eframe = { version = "0.24", features = ["default_fonts", "wgpu", "persistence"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pretty_env_logger = "0.5"
serialport = "4.3"
poll-promise = { version = "0.3", features = ["smol"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1"
js-sys = "0.3.66"
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.39"
poll-promise = { version = "0.3", features = ["web"] }

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "=0.3.64"
features = [
    "Window",
    "Navigator",
    "Serial",
    "SerialPort",
    "SerialPortInfo",
    "SerialPortRequestOptions",
    "SerialOptions",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "ParityType",
    "FlowControlType",
]

[build-dependencies]
anyhow = "1"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]
