[package]
authors = ["Felix Zwettler <f.zwettler@posteo.de>"]
build = "build.rs"
edition = "2021"
license = "GPL-3.0-or-later"
name = "splot"
rust-version = "1.65"
version = "0.1.0"

[features]
default = []
demo = []

[dependencies]
anyhow = "1"
async-trait = "0.1.79"
eframe = { version = "0.27.0", features = [
    "default_fonts",
    "wgpu",
    "persistence",
] }
egui = "0.27.0"
egui_extras = { version = "0.27.0", features = ["all_loaders"] }
egui_plot = "0.27.0"
futures = "0.3.30"
image = { version = "0.25.0", features = ["png"] }
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
log = "0.4.21"
once_cell = "1.19"
serde = { version = "1.0", features = [
    # You only need this if you want app persistence
    "derive",
] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
poll-promise = { version = "0.3.0", features = ["smol"] }
pretty_env_logger = "0.5.0"
serialport = "4.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
js-sys = "0.3.69"
poll-promise = { version = "0.3.0", features = ["web"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
features = [
    "Window",
    "Navigator",
    "Serial",
    "SerialPort",
    "SerialPortInfo",
    "SerialPortRequestOptions",
    "SerialOptions",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "ParityType",
    "FlowControlType",
]
version = "0.3.69"

[build-dependencies]
anyhow = "1.0"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1.17"

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]
